# ROS2-Drone-Simulation

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
python/sweeping_generator/: package.xml
python/sweeping_generator/launch/: sweeping_generator_launch.py
tmux/: CMakeLists.txt  kill.sh  layout.json  session.yml  start.sh
tmux/config/: custom_config.yaml  network_config.yaml  world_config.yaml
tmux/install/: local_setup.sh  setup.sh
tmux/install/sweeping_generator/share/sweeping_generator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tmux/install/sweeping_generator/share/sweeping_generator/cmake/: sweeping_generatorConfig.cmake
tmux/install/sweeping_generator/share/sweeping_generator/config/: automatic_start.yaml  hw_api.yaml  simulator.yaml
tmux/install/sweeping_generator/share/sweeping_generator/launch/: sweeping_generator_launch.py
tmux/log/: latest_build
tmux/scripts/: sweeping_generator.py
