<?xml version="1.0"?>
<package format= "2">

  <name>ros2_sweeping_generator</name>
  <version>1.0.0</version>


  <description>Example sweeping generator for ROS2-Python <description>

  <author email="skarthi1@charlotte.edu">Sujjay Karthikeyan</author>


  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mrs_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>