<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sweeping_generator</name>
  <version>1.0.0</version>
  <description>Sweeping generator for drone path planning</description>
  <maintainer email="skarthi1@charlotte.edu">Sujjay</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mrs_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>